apps/todo-app-v0.6/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: todo-app
          image: frankhul/todo-app:v0.6
          volumeMounts:
            - name: shared-data
              mountPath: /app/public/images
