apps/todo-app-v0.6/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 8080
